alignment fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ body{
 
 input{
 	display: block;
-	margin:15px 20px 15px 20px;
+	
 	width:320px;
 	border: 2px solid lightgrey;
 	border-radius: 5px;
@@ -24,13 +24,12 @@ input{
 }
 
 label{
-	margin:15px 20px 15px 20px;
+	margin:15px 0 15px 0;
 	display: block;
 
 }
 
 button{
-	margin:15px 20px 15px 20px;
 	height:55px;
 	width:320px;
 	display: block;
@@ -40,7 +39,8 @@ button{
 	border-radius: 5px;
 	color:white;
 	font-weight:bold;
-	font-size: 16px;	
+	font-size: 16px;
+	margin: 15px 0 15px 0;	
 }
 
 button:hover{
